--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/package",
   "name": "broumt",
   "description": "📦 A lightweight, fast and efficient cache",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "test": "vitest test --dir \"./test/\"",
@@ -10,16 +10,14 @@
     "format": "eslint --fix --ext .ts \"./\"",
     "build": "tsc --project \"./\""
   },
-  "main": "./dist/src/index.js",
-  "types": "./typings/src/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./typings/index.d.ts",
   "files": [
     "./dist/",
     "./typings/"
   ],
   "directories": {
-    "lib": "./dist/src/",
-    "test": "./dist/test/",
-    "bench": "./dist/bench/"
+    "lib": "./dist/"
   },
   "author": {
     "name": "theNooden",
