--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/package",
   "name": "broumt",
   "description": "📦 A small and efficient cache",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "type": "module",
   "private": false,
   "scripts": {
@@ -39,7 +39,7 @@
     "node": ">=18.*"
   },
   "devDependencies": {
-    "@types/node": "18.*",
+    "@types/node": "*",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.37.0",
