--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "$schema": "https://json.schemastore.org/package",
   "name": "broumt",
   "description": "📦 A small and efficient cache",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "type": "module",
   "private": false,
   "scripts": {
@@ -19,14 +18,11 @@
   "directories": {
     "lib": "./dist/"
   },
-  "author": {
-    "name": "theNooden",
-    "email": "the.nooden@gmail.com"
-  },
+  "author": "kh0wel",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/theNooden/broumt.git"
+    "url": "https://github.com/kh0wel/broumt.git"
   },
   "keywords": [
     "experiment",
